fix: resources 디렉토리 생성 명령 추가

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: application.yml 생성
         run: |
+          mkdir -p src/main/resources
           touch src/main/resources/application.yml
           echo "${{ secrets.ENV }}" > src/main/resources/application.yml
 
